@startuml

skinparam linetype ortho
skinparam Shadowing False

skinparam class {
    BackgroundColor<<Entity>> Moccasin
    BackgroundColor<<value object>> Azure
    BackgroundColor<<Event>> MediumAquaMarine
    BackgroundColor<<Service>> SkyBlue
    ArrowColor DarkSlateGrey
}

skinparam package {
    BackgroundColor PowderBlue
    packageLayout grid
    packageColumn 2
}

'LIGACOES DENTRO DO AGREGADO FICAM DENTRO DO PACKAGE
'LIGACOES ENTRE AGREGADOS FICAM NO FINAL DO FICHEIRO DEPOIS DOS PACKAGES

package Entities/Core/Domain {

package ValueObjects {
    class Description <<value object>>
    class Coordinates <<value object>>
    class Dimensions <<value object>>
}

package Services {


}

package Aggregates {

package BUILDING <<Aggregate>> {

    entity Building <<root>> <<Entity>>

    entity Room <<Entity>>

    entity Floor <<Entity>>

    Building o-- Floor
    Floor o-- Room

    Building --> Description
    Building --> Dimensions
    Floor --> Description
    Floor --> Dimensions
    Room --> Description
    Room -- Dimensions
}

package ROBOT <<Aggregate>> {

    entity Robot <<root>> <<Entity>>

}
package ROBOT_TYPE <<Aggregate>>{

    entity RobotType <<root>> <<Entity>>
}


package USER <<Aggregate>> {
    entity User <<root>> <<Entity>>
}

}

}

'<<value object>>
@enduml

